--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/Cmpdleon/cmsc129#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googlemaps": "^1.12.0",
     "http-errors": "^2.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
