--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
@@ -31,6 +31,7 @@
     "mongoose": "^6.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "serverless-http": "^3.2.0"
   }
 }
