--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-Views/** linguist-generated
+views/public/** linguist-generated
+views/pages/** linguist-generated
 
 ## GITATTRIBUTES FOR WEB PROJECTS
 #
