--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-views/public/** linguist-generated
+views/partials/** linguist-generated
 views/pages/** linguist-generated
 
 ## GITATTRIBUTES FOR WEB PROJECTS
